# ecommerce-support-agent

./: AGENTS.md  CLAUDE.md  README.md  debug.ipynb  lang_cli.py  langgraph.json  main.py  pyproject.toml  streamlit_app.py  web_server.py
graph/: business_policy_store.py  policy_store.py  state.py  workflow.py
graph/db/: models.py  session.py
graph/llm/: client.py
graph/nodes/: billing_agent.py  order_agent.py  policy_completeness_guard.py  policy_risk_guard.py  policy_scope_guard.py  ticket_writer.py  tone_polisher.py  triage_router.py
tests/: test_architecture.py  test_nodes.py
web/: app.js  index.html  styles.css
